# didactic-octo-couscous

./: .pre-commit-config.yaml  GEMINI.md  README.md
backend/: .env.example  Dockerfile  README.md  database.py  fly.toml  main.py  models.py  populate_db.py  pyproject.toml  schemas.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 269102a6454f_initial_migration.py  2ea209215272_add_activity_templates.py  35e131c3fb24_initial_migration.py  4cd49d9f35a4_add_supervisor_assignment.py  51369c7d20f1_initial_migration.py  5dc108620b75_add_admin_role.py  620e2fe4367e_add_admin_role.py  8cd03ace122e_make_activity_assignment_mandatory.py  92bcf0011378_add_in_review_field_to_activity.py  db6068ad4187_add_admin_role.py  dff8a3b53cc9_replace_is_done_with_status_enum_in_.py  e0dc32bf10ec_resolve_ambiguous_foreign_keys_in_.py  faca364dd39f_link_activity_to_activitytemplate.py
backend/routers/: activities.py  activity_stats.py  activity_templates.py  auth.py  todos.py  todos_template.py  users.py
frontend/: .env.production  Dockerfile  fly.toml  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: GeneralStatsModal.tsx  ProtectedRoute.tsx  SupervisorStatsModal.tsx
frontend/src/components/ActivityCalendar/: ActivityCalendarView.tsx  index.ts  (+3 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: activityUtils.ts  utils.ts
frontend/src/services/: activityService.ts  activityTemplateService.ts  authService.ts  userService.ts
frontend/src/styles/: calendar.css  colors.ts
frontend/src/types/: activity.ts
(+11 files in other folders)
